// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard renders the character 1`] = `
<span
  className="container"
>
  <span
    className="character"
  >
    科
  </span>
</span>
`;

exports[`CharacterCard renders the definition 1`] = `
<span
  className="container showDefinition"
>
  <span
    className="pinyin"
  >
    kē
  </span>
  <span
    className="definition"
  >
    branch of study
  </span>
</span>
`;

exports[`CharacterCard renders the fallback definition 1`] = `
<span
  className="container showDefinition"
>
  <span
    className="pinyin"
  >
    kē
  </span>
  <span
    className="definition"
  >
    (No definition available)
  </span>
</span>
`;
